Bug 1648474 - patch 1 - Include all localized DirectWrite font family names in the font list. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D87660